--- a/console/src/main/resources/application.properties
+++ b/console/src/main/resources/application.properties
@@ -32,20 +32,42 @@ server.port=8848
 #*************** Config Module Related Configurations ***************#
 ### Deprecated configuration property, it is recommended to use `spring.sql.init.platform` replaced.
 #spring.datasource.platform=mysql
-spring.datasource.platform=dm
+
+#### 达梦数据库
+#spring.datasource.platform=dm
 # nacos.plugin.datasource.log.enabled=true
+
 #spring.sql.init.platform=mysql
-spring.sql.init.platform=dm
+#spring.sql.init.platform=dm
+
 ### Count of DB:
+#db.num=1
+#### 达梦数据库
+#db.jdbcDriverName=dm.jdbc.driver.DmDriver
+
+#### 达梦数据库
+#db.url.0=jdbc:dm://127.0.0.1:5236/NACOS_2_4_0_1?STU&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
+#db.user.0=NACOS_2_4_0_1
+#db.password.0=1234.Com;
+
+
+#### postgresql
+spring.datasource.platform=postgresql
+spring.sql.init.platform=postgresql
+db.url.0=jdbc:postgresql://127.0.0.1:5432/nacos?tcpKeepAlive=true&reWriteBatchedInserts=true&ApplicationName=nacos_java
+db.user.0=nacos
+db.password.0=nacos
+##db.pool.config.driverClassName=org.postgresql.Driver
 db.num=1
-db.jdbcDriverName=dm.jdbc.driver.DmDriver
+db.jdbcDriverName=org.postgresql.Driver
 ### Connect URL of DB:
 # db.url.0=jdbc:mysql://127.0.0.1:3306/nacos?characterEncoding=utf8&connectTimeout=1000&socketTimeout=3000&autoReconnect=true&useUnicode=true&useSSL=false&serverTimezone=UTC
 # db.user=nacos
 # db.password=nacos
-db.url.0=jdbc:dm://127.0.0.1:5236/NACOS_2_4_0_1?STU&zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8
-db.user.0=NACOS_2_4_0_1
-db.password.0=1234.Com;
+
+
+
+
 ### the maximum retry times for push
 nacos.config.push.maxRetryTime=50
 
