--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,8 @@
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
         <!--达梦-->
         <dm-connector-java.version>8.1.1.193</dm-connector-java.version>
+        <!--postgresql-->
+        <jdbc.postgresql.version>42.2.19</jdbc.postgresql.version>
         <derby.version>10.14.2.0</derby.version>
         <jjwt.version>0.11.2</jjwt.version>
         <grpc-java.version>1.64.2</grpc-java.version>
